force-app/main/default/objects/Cluster_Role__c/Cluster_Role__c.object-meta.xml
<CustomObject>
    <description>Connection between a Cluster__c and an Account</description>
    <label>Cluster Role</label>
    <nameField>
        <displayFormat>CLR-{000000000}</displayFormat>
        <label>Cluster Role Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>