force-app/main/default/objects/Cluster_Role__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>The cluster in this role</description>
    <inlineHelpText>The cluster in this role</inlineHelpText>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipName>Cluster_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>