force-app/main/default/objects/Cluster_Role__c/fields/Deduplication_Key__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Key__c</fullName>
    <description>Holds key to make sure this record is unique for the parent.</description>
    <externalId>true</externalId>
    <label>Deduplication Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>