force-app/main/default/objects/Cluster_Role__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>When does this role end?</description>
    <inlineHelpText>When does this role end?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>