force-app/main/default/objects/Cluster_Role__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person of this role relation</description>
    <inlineHelpText>The person of this role relation</inlineHelpText>
    <label>Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cluster_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>