force-app/main/default/objects/Cluster_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Type of role between this person and cluster</description>
    <inlineHelpText>Type of role between this person and cluster</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>VVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>