force-app/main/default/objects/Cluster_Role__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When does this role commence?</description>
    <inlineHelpText>When does this role commence?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>